# file-manager

./: .gitignore  ARCHITECTURE.md  README.md  REFACTOR_PLAN.md  TEST_PLAN.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.vpt.filemanager.data.db.AppDatabase/: 1.json  2.json
app/schemas/com.vpt.filemanager.storage.persistence.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libarchive_bridge.cpp
app/src/main/res/anim/: layout_pane_fade.xml  row_fade_in.xml
app/src/main/res/color/: editor_toolbar_icon_tint.xml
app/src/main/res/drawable/: bg_badge_rounded.xml  bg_bottom_bar.xml  bg_file_row.xml  bg_icon_archive.xml  bg_icon_audio.xml  bg_icon_file.xml  bg_icon_folder.xml  bg_icon_pdf.xml  bg_pane_indicator.xml  ic_add.xml  ic_arrow_back.xml  ic_arrow_forward.xml  ic_arrow_up.xml  ic_bookmark.xml  ic_bookmark_remove.xml  ic_close.xml  ic_compress.xml  ic_copy.xml  ic_dark_mode.xml  ic_deselect_all.xml  ic_exit.xml  ic_file.xml  ic_file_shape.xml  ic_file_unknown.xml  ic_folder.xml  ic_glyph_apk.xml  ic_glyph_archive.xml  ic_glyph_audio.xml  ic_glyph_code.xml  ic_glyph_document.xml  ic_glyph_image.xml  ic_glyph_pdf.xml  ic_glyph_sheet.xml  ic_glyph_slide.xml  ic_glyph_unknown.xml  ic_glyph_video.xml  ic_launcher.xml  ic_launcher_foreground.xml  ic_light_mode.xml  ic_menu.xml  (+20 more)
app/src/main/res/font/: font_family.xml
app/src/main/res/layout/: sheet_sort.xml  (+27 more)
docs/: abstract.md  specification.md
gradle/: libs.versions.toml
(+879 files in other folders)
